WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83832
REGRESSION (
r102262
): iAd Producer relies on CSSStyleDeclaration property setters respecting '!important'
https://bugs.webkit.org/show_bug.cgi?id=83832
Summary
REGRESSION (r102262): iAd Producer relies on CSSStyleDeclaration property set...
Andy Estes
Reported
2012-04-12 16:16:50 PDT
REGRESSION (
r102262
): iAd Producer relies on CSSStyleDeclaration property setters respecting '!important'
Attachments
Patch
(10.60 KB, patch)
2012-04-12 16:29 PDT
,
Andy Estes
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2012-04-12 16:29:12 PDT
Created
attachment 136995
[details]
Patch
Alexey Proskuryakov
Comment 2
2012-04-12 16:39:16 PDT
Comment on
attachment 136995
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=136995&action=review
> Source/WebCore/WebCore.exp.in:687 > +__ZN7WebCore24applicationIsIAdProducerEv
It's quite weird that we go back and forth between WebCore and WebKit like this. Is this really how we always do this? Can't this function just be in WebKit?
Andy Estes
Comment 3
2012-04-12 16:43:27 PDT
(In reply to
comment #2
)
> (From update of
attachment 136995
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=136995&action=review
> > > Source/WebCore/WebCore.exp.in:687 > > +__ZN7WebCore24applicationIsIAdProducerEv > > It's quite weird that we go back and forth between WebCore and WebKit like this. Is this really how we always do this? Can't this function just be in WebKit?
I might be abusing a file meant for functions called both in WebCore and WebKit. I'll move it into WebKit before landing.
Andy Estes
Comment 4
2012-04-12 16:58:54 PDT
Committed
r114048
: <
http://trac.webkit.org/changeset/114048
>
Eric Seidel (no email)
Comment 5
2012-04-12 20:31:47 PDT
Comment on
attachment 136995
[details]
Patch Feels a bit odd to flag this off of USE(JSC), since it's really only PLATFORM(MAC), but OK.
Andy Estes
Comment 6
2012-04-13 14:11:23 PDT
(In reply to
comment #5
)
> (From update of
attachment 136995
[details]
) > Feels a bit odd to flag this off of USE(JSC), since it's really only PLATFORM(MAC), but OK.
USE(JSC) seems appropriate since the hack is specific to the JSC bindings. The fact that this is only enabled on WebKit1/Mac at the moment seems orthogonal to how we make the setting available to ports.
Andy Estes
Comment 7
2012-06-25 15:49:46 PDT
<
rdar://problem/11131241
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug